- fix cloudwatch permissions for lambda and beutify lambda's code

--- a/aws/multi_region_network/PAS-Peer-Networks.yaml
+++ b/aws/multi_region_network/PAS-Peer-Networks.yaml
@@ -28,6 +28,12 @@ Resources:
               - 'arn:aws:ec2:*:*:security-group/*'
               - 'arn:aws:ec2:*:*:vpc/*'
               - 'arn:aws:cloudformation:*:*:stack/*/*'
+          - Effect: Allow
+            Action:
+              - 'logs:CreateLogGroup'
+              - 'logs:CreateLogStream'
+              - 'logs:PutLogEvents'
+            Resource: 'arn:aws:logs:*:*:*'
   PeerNetworksLambdaRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -45,58 +51,10 @@ Resources:
     Type: 'AWS::Lambda::Function'
     Properties:
       Code:
-        ZipFile: |-
-                  import urllib
-                  import boto3
-                  import time
-                  import cfnresponse
-                  import uuid
-                  def lambda_handler(event, context):
-                      try:
-                          physicalResourceId = str(uuid.uuid4())
-                          if 'PhysicalResourceId' in event:
-                              physicalResourceId = event['PhysicalResourceId']
-                          if event['RequestType'] == 'Delete':
-                              return cfnresponse.send(event, context, cfnresponse.SUCCESS, None, {}, physicalResourceId)
-                          if event['RequestType'] == 'Create':
-                              CloudFormationNameRequester = event['ResourceProperties']['CloudFormationName']
-                              CloudFormationNameAccepter = event['ResourceProperties']['CloudFormationSecondaryRegionName']
-                              AccepterRegion = event['ResourceProperties']['SecondaryRegionName']
-                              cf_requester_client = boto3.client('cloudformation')
-                              cf_accepter_client = boto3.client('cloudformation',AccepterRegion)
-                              ec2_requester_resource = boto3.resource('ec2')
-                              ec2_accepter_resource = boto3.resource('ec2',AccepterRegion)
-                              # Fetch physical resource ids of VPC, Route Table
-                              response = cf_requester_client.describe_stack_resource(StackName=CloudFormationNameRequester,LogicalResourceId='PASVPC')
-                              vpc_requester_id = response['StackResourceDetail']['PhysicalResourceId']
-                              response = cf_requester_client.describe_stack_resource(StackName=CloudFormationNameRequester,LogicalResourceId='PASPrivateRT')
-                              route_table_requester_id = response['StackResourceDetail']['PhysicalResourceId']
-                              # Fetch physical resource ids of VPC, Route Table
-                              response = cf_accepter_client.describe_stack_resource(StackName=CloudFormationNameAccepter,LogicalResourceId='PASVPC')
-                              vpc_accepter_id = response['StackResourceDetail']['PhysicalResourceId']
-                              response = cf_accepter_client.describe_stack_resource(StackName=CloudFormationNameAccepter,LogicalResourceId='PASPrivateRT')
-                              route_table_accepter_id = response['StackResourceDetail']['PhysicalResourceId']
-                              # Create Peering connection
-                              vpc_requester = ec2_requester_resource.Vpc(vpc_requester_id)
-                              vpc_peering_connection = vpc_requester.request_vpc_peering_connection(DryRun=False,PeerVpcId=vpc_accepter_id,PeerRegion=AccepterRegion)
-                              # Accept Peering connection (wait 2 seconds until the peer exists in second region)
-                              vpc_peering_connection_accepter = ec2_accepter_resource.VpcPeeringConnection(vpc_peering_connection.id)
-                              time.sleep(2)
-                              response = vpc_peering_connection_accepter.accept()
-                              # Fetch VPC CIDRs from the peering connection (for further use)
-                              vpc_cidr_requester = response['VpcPeeringConnection']['RequesterVpcInfo']['CidrBlock']
-                              vpc_cidr_accepter = response['VpcPeeringConnection']['AccepterVpcInfo']['CidrBlock']
-                              route_table_requester = ec2_requester_resource.RouteTable(route_table_requester_id)
-                              route_table_accepter = ec2_accepter_resource.RouteTable(route_table_accepter_id)
-                              route_table_requester.create_route(DestinationCidrBlock=vpc_cidr_accepter, VpcPeeringConnectionId=vpc_peering_connection.id)
-                              route_table_accepter.create_route(DestinationCidrBlock=vpc_cidr_requester, VpcPeeringConnectionId=vpc_peering_connection.id)
-                              return cfnresponse.send(event, context, cfnresponse.SUCCESS, None, {}, physicalResourceId)
-                      except Exception as e:
-                          print ("Error on creating network peering. Error: {0}".format(e))
-                          return cfnresponse.send(event, context, cfnresponse.FAILED, None, {}, physicalResourceId)
-
+        S3Bucket: !Ref LambdasBucket
+        S3Key: pas_peer_networks.zip
       Description: Lambda to create and configure network peering
-      Handler: PeerNetworksLambda.lambda_handler
+      Handler: PasPeerNetworks.lambda_handler
       Role: !GetAtt
         - PeerNetworksLambdaRole
         - Arn
@@ -115,6 +73,11 @@ Resources:
       SecondaryRegionName: !Ref SecondaryRegionName
       CloudFormationSecondaryRegionName: !Ref CloudFormationSecondaryRegionName
 Parameters:
+  LambdasBucket:
+    Type: String
+    Description: >-
+      Name of the bucket containing the solution files. The bucket must be in
+      the same region where the solution is deployed
   CloudFormationName:
     Type: String
     Description: The name of the Network CloudFormation in current region
@@ -128,6 +91,10 @@ Metadata:
   'AWS::CloudFormation::Interface':
     ParameterGroups:
       - Label:
+          default: Lambda configuration
+        Parameters:
+          - LambdasBucket
+      - Label:
           default: Current Region parameters
         Parameters:
           - CloudFormationName
@@ -137,6 +104,8 @@ Metadata:
           - SecondaryRegionName
           - CloudFormationSecondaryRegionName
     ParameterLabels:
+      LambdasBucket:
+        default: 'Bucket Name:'
       CloudFormationName:
         default: 'The name of the Network CloudFormation in current Region:'
       SecondaryRegionName:
