--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -154,6 +154,13 @@ Resources:
       Password: !Ref 'VaultAdminPassword'
     DependsOn:
       - LambdaDeployRole
+  StoreDRPassword:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
+      Password: !Ref 'DRVaultPassword'
+    DependsOn:
+      - LambdaDeployRole
   CleanMasterPassword:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
@@ -172,6 +179,15 @@ Resources:
     DependsOn:
       - LambdaDeployRole
       - VaultMachine
+  CleanDRPassword:
+    Type: AWS::CloudFormation::CustomResource
+    Version: '1.0'
+    Properties:
+      ServiceToken: !GetAtt 'DeletePasswordLambda.Arn'
+      key: !GetAtt 'StoreDRPassword.SsmId'
+    DependsOn:
+      - LambdaDeployRole
+      - VaultMachine    
   LambdaRemovePermissionsRole:
     Type: 'AWS::IAM::Role'
     Properties:
@@ -350,6 +366,7 @@ Resources:
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreMasterPassword.SsmId}'
                   - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreAdminPassword.SsmId}'
+                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreDRPassword.SsmId}'
         - PolicyName: VaultFilesBucketAccess
           PolicyDocument:
             Statement:
@@ -447,7 +464,7 @@ Resources:
               waitAfterCompletion: 0
             2-postInstall:
               command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} -Secret ${Secret}
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} -Secret ${Secret}
               waitAfterCompletion: 0
             3-changeKMSTag:
               command: !Sub >
@@ -514,7 +531,7 @@ Parameters:
       letter, 1 uppercase letter, 1 digit and 1 special character
   RetypeAdminPassword:
     Type: String
-    Description: Retype the password for the Primary Vault Administrator user.
+    Description: Retype the password for the DR Vault Administrator user.
     NoEcho: true
     MinLength: 8
   VaultInstanceName:
@@ -548,6 +565,19 @@ Parameters:
   VaultInstanceSubnetId:
     Type: AWS::EC2::Subnet::Id
     Description: Select the Subnet Id where the Primary Vault instance will reside.
+  DRVaultPassword:
+    Type: String
+    Description: Enter a password for the DR Vault Administrator user.
+    NoEcho: true
+    MinLength: 8
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
+    ConstraintDescription: Vault Administrator password must contain at least 1 lowercase
+      letter, 1 uppercase letter, 1 digit and 1 special character
+  RetypeDRVaultPassword:
+    Type: String
+    Description: Retype the password for the Primary Vault Administrator user.
+    NoEcho: true
+    MinLength: 8
   Secret:
     Type: String
     Description: Enter a secret string for the DR user.(Optional).
@@ -564,6 +594,10 @@ Rules:
       - Assert: !Equals
           - !Ref 'VaultMasterPassword'
           - !Ref 'RetypeMasterPassword'
+        AssertDescription: The password confirmation does not match.
+      - Assert: !Equals
+          - !Ref 'DRVaultPassword'
+          - !Ref 'RetypeDRVaultPassword'
         AssertDescription: The password confirmation does not match.
       - Assert: !Equals
           - !Ref 'VaultAdminPassword'
@@ -597,6 +631,8 @@ Metadata:
           - RetypeAdminPassword
           - VaultMasterPassword
           - RetypeMasterPassword
+          - DRVaultPassword
+          - RetypeDRVaultPassword
           - Secret
           - SecretRetype
       - Label: 
@@ -636,6 +672,8 @@ Metadata:
         default: Vault Instance Security Groups
       VaultInstanceSubnetId:
         default: Vault Instance Subnet Id
+      DRVaultPassword:
+        default: DR Vault Password
       Secret:
         default: DR Username Secret
       SecretRetype:
