--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -435,6 +435,7 @@ Resources:
           ascending:
             - configSSMAndHostname
             - configServices
+            - postInstall
             - configSignal
         configSSMAndHostname:
           services:
@@ -462,11 +463,21 @@ Resources:
               command: >
                 powershell.exe -File C:\CyberArk\Deployment\FixENE.ps1
               waitAfterCompletion: 0
-            2-postInstall:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} -Secret ${Secret}
+        postInstall:
+          commands:
+            1-postInstallWithDR:
+              command: !Sub
+              - >-
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID 
+                ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} 
+                -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" 
+                -Region ${AWS::Region} ${Secret}
+              - Secret: !If 
+                  - SecretEmpty
+                  - ''
+                  - !Sub '-Secret ${Secret}'
               waitAfterCompletion: 0
-            3-changeKMSTag:
+            2-changeKMSTag:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1
                 -Role ${VaultInstancesRole} -Region ${AWS::Region}
@@ -678,6 +689,10 @@ Metadata:
         default: DR Username Secret
       SecretRetype:
         default: Retype DR Username Secret
+Conditions:
+  SecretEmpty: !Equals
+    - ''
+    - !Ref Secret
 Mappings:
   RegionMap:
     us-east-1:
@@ -685,7 +700,7 @@ Mappings:
     us-east-2:
       Vault: ami-068bc4ecc92db8199
     eu-west-2:
-      Vault: ami-0be1c88985ba5c3da
+      Vault: ami-0c9c64fc81b6ce838
     us-west-1:
       Vault: ami-0f1803a9c76472be5
     us-west-2:
