--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -339,12 +339,11 @@ Resources:
       PolicyName: KMSPolicy
       PolicyDocument:
         Statement:
-          - Effect: Allow
+          - Effect: Deny
             Action:
-              - kms:Encrypt
-              - kms:Decrypt
+              - '*'
             Resource:
-              - !GetAtt LambdaRemovePermissionsRole.Arn
+              - '*'
       Roles:
         - !Ref LambdaRemovePermissionsRole
     DependsOn:
@@ -355,12 +354,11 @@ Resources:
       PolicyName: VaultBootstrapIAMPolicy
       PolicyDocument:
         Statement:
-          - Effect: Allow
+          - Effect: Deny
             Action:
-              - kms:Encrypt
-              - kms:Decrypt
+              - '*'
             Resource:
-              - !GetAtt LambdaRemovePermissionsRole.Arn
+              - '*'
       Roles:
         - !Ref VaultInstancesRole
         - !Ref VaultDRInstancesRole
