--- a/aws/PAS-AIO-Deployment.yaml
+++ b/aws/PAS-AIO-Deployment.yaml
@@ -8,19 +8,19 @@ Resources:
     Type: AWS::Logs::LogStream
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: VaultMachine/CfnInitLog
+      LogStreamName: 'VaultMachine/CfnInitLog'
     DeletionPolicy: Retain
   VaultInitLogStream:
     Type: AWS::Logs::LogStream
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: VaultMachine/VaultInitLog
+      LogStreamName: 'VaultMachine/VaultInitLog'
     DeletionPolicy: Retain
   VaultPostInstallLogStream:
     Type: AWS::Logs::LogStream
     Properties: 
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: VaultMachine/VaultPostInstallLog
+      LogStreamName: 'VaultMachine/VaultPostInstallLog'
   ComponentsCfnInitLogStream:
     Type: AWS::Logs::LogStream
     Properties:
@@ -214,6 +214,20 @@ Resources:
       Password: !Ref 'VaultAdminPassword'
     DependsOn:
       - LambdaDeployRole
+  StoreDRPassword:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
+      Password: !Ref 'DRVaultPassword'
+    DependsOn:
+      - LambdaDeployRole
+  StoreSecret:
+    Type: AWS::CloudFormation::CustomResource
+    Properties:
+      ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
+      Password: !Ref 'Secret'
+    DependsOn:
+      - LambdaDeployRole
   CleanMasterPassword:
     Type: AWS::CloudFormation::CustomResource
     Version: '1.0'
@@ -234,6 +248,26 @@ Resources:
       - LambdaDeployRole
       - StorePasswordLambda
       - ComponentsMachine
+  CleanDRPassword:
+    Type: AWS::CloudFormation::CustomResource
+    Version: '1.0'
+    Properties:
+      ServiceToken: !GetAtt 'DeletePasswordLambda.Arn'
+      key: !GetAtt 'StoreDRPassword.SsmId'
+    DependsOn:
+      - LambdaDeployRole
+      - StorePasswordLambda
+      - VaultMachine
+  CleanSecret:
+    Type: AWS::CloudFormation::CustomResource
+    Version: '1.0'
+    Properties:
+      ServiceToken: !GetAtt 'DeletePasswordLambda.Arn'
+      key: !GetAtt 'StoreSecret.SsmId'
+    DependsOn:
+      - LambdaDeployRole
+      - StorePasswordLambda
+      - VaultMachine
   LambdaRemovePermissionsRole:
     Type: AWS::IAM::Role
     Properties:
@@ -415,9 +449,17 @@ Resources:
               command: !Sub >
                 powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
               waitAfterCompletion: 0
-            2-postInstall:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -IsPrimaryOrDR "Primary" -PrimaryVaultIP "1.1.1.1" -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region}
+            2-postInstallWithDR:
+              command: !Sub
+              - >-
+                powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID 
+                ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} 
+                -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" 
+                -Region ${AWS::Region} -SSMSecretParameterID ${StoreSecret.SsmId}
+              - Secret: !If 
+                  - SecretEmpty
+                  - ''
+                  - !Sub '-SSMSecretParameterID ${StoreSecret.SsmId}'
               waitAfterCompletion: 0
             3-changeKMSTag:
               command: !Sub >
@@ -517,6 +559,8 @@ Resources:
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreMasterPassword.SsmId}'
                   - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreAdminPassword.SsmId}'
+                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreDRPassword.SsmId}'
+                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${StoreSecret.SsmId}'
         - PolicyName: VaultFilesBucketAccess
           PolicyDocument:
             Statement:
@@ -593,8 +637,8 @@ Resources:
           services:
             windows:
               AmazonSSMAgent:
-                enabled: true
-                ensureRunning: true
+                enabled: 'true'
+                ensureRunning: 'true'
                 files:
                   - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
           commands:
@@ -722,11 +766,10 @@ Parameters:
     ConstraintDescription: Can contain only ASCII characters.
   VaultFilesBucket:
     Type: String
-    Description: Enter the name of the bucket containing the license and recovery
-      public key.
+    Description: Enter the name of the S3 bucket containing the license and recovery public key.
   LicenseFile:
     Type: String
-    Description: Enter the path of the license file within the bucket.
+    Description: Enter the path of the Vault license file within the bucket.
     Default: license.xml
   RecoveryPublicKey:
     Type: String
@@ -734,8 +777,8 @@ Parameters:
     Default: recpub.key
   VaultInstanceName:
     Type: String
-    Description: Enter a name for the Vault instance.
-    Default: CyberArk Vault
+    Description: Enter a name for the Primary Vault instance.
+    Default: CyberArk Primary Vault
   VaultMasterPassword:
     Type: String
     Description: Enter a password for the Vault Master user.
@@ -762,21 +805,51 @@ Parameters:
     Description: Retype the password for the Vault Administrator user.
     NoEcho: true
     MinLength: 8
+  DRVaultPassword:
+    Type: String
+    Description: Enter a password for the DR Vault Administrator user.
+    NoEcho: true
+    MinLength: 8
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$
+    ConstraintDescription: Vault Administrator password must contain at least 1 lowercase
+      letter, 1 uppercase letter, 1 digit and 1 special character
+  RetypeDRVaultPassword:
+    Type: String
+    Description: Retype the password for the Primary Vault Administrator user.
+    NoEcho: true
+    MinLength: 8
+  Secret:
+    Type: String
+    Description: Enter a secret string for the DR user.(Optional).
+    NoEcho: true
+    AllowedPattern: ^(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[~!@#$%^&\*\(\)_\-+=:])(?=\S+$).{8,}$|.{0,0}
+    ConstraintDescription: if the value isnt empty it must contain at least 1 lowercase letter, 1 uppercase letter, 1 digit and 1 special characters,
+      Minimum 10 characters, Allowed A-Z,a-z,0-9,all special characters, Cannot except / \ - ; and controlled characters.
+    MinLength: 10
+  SecretRetype:
+    Type: String
+    Description: Retype the secret string for the DR User.
+    NoEcho: true
+    MinLength: 10
   VaultInstanceType:
     Type: String
-    Description: Select the instance type of the Vault instance.
+    Description: Select the instance type of the Primary Vault instance.
     AllowedValues:
-      - m4.large
-      - m4.xlarge
-      - m4.2xlarge
-      - m4.4xlarge
-    Default: m4.large
+      - m5.large
+      - m5.xlarge
+      - m5.2xlarge
+      - m5.4xlarge
+      - m5.8xlarge
+      - m5.12xlarge
+      - m5.16xlarge
+      - m5.24xlarge
+    Default: m5.large
   VaultInstanceSecurityGroups:
     Type: List<AWS::EC2::SecurityGroup::Id>
-    Description: Assign Security Groups to the Vault instance.
+    Description: Assign Security Groups to the Primary Vault instance.
   VaultInstanceSubnetId:
     Type: AWS::EC2::Subnet::Id
-    Description: Select the Subnet Id where the Vault instance will reside.
+    Description: Select the Subnet Id where the Primary Vault instance will reside.
   ComponentsInstanceName:
     Type: String
     Description: Enter a name for the PAS Components instance.
@@ -796,6 +869,10 @@ Parameters:
   ComponentsInstanceSubnetId:
     Type: AWS::EC2::Subnet::Id
     Description: Select the Subnet Id where the PAS Components instance will reside.
+Conditions:
+  EULACondition: !Equals
+    - Accept
+    - !Ref 'EULA'
 Rules:
   PasswordConfirmation:
     Assertions:
@@ -807,12 +884,20 @@ Rules:
           - !Ref 'VaultAdminPassword'
           - !Ref 'RetypeAdminPassword'
         AssertDescription: The password confirmation does not match.
+      - Assert: !Equals
+          - !Ref 'DRVaultPassword'
+          - !Ref 'RetypeDRVaultPassword'
+        AssertDescription: The password confirmation does not match.
+      - Assert: !Equals
+          - !Ref 'Secret'
+          - !Ref 'SecretRetype'
+        AssertDescription: The secret confirmation does not match.
   EULAAcception:
     Assertions:
       - Assert: !Equals
           - !Ref 'EULA'
           - Accept
-        AssertDescription: You must accept EULA to continue.
+        AssertDescription: You must accept EULA to continue
 Metadata:
   AWS::CloudFormation::Interface:
     ParameterGroups:
@@ -827,11 +912,15 @@ Metadata:
       - Label:
           default: Vault Configuration
         Parameters:
-          - VaultInstanceName
-          - VaultMasterPassword
-          - RetypeMasterPassword
           - VaultAdminPassword
           - RetypeAdminPassword
+          - VaultMasterPassword
+          - RetypeMasterPassword
+          - DRVaultPassword
+          - RetypeDRVaultPassword
+          - Secret
+          - SecretRetype
+          - VaultInstanceName
           - VaultInstanceType
           - VaultInstanceSecurityGroups
           - VaultInstanceSubnetId
@@ -848,27 +937,35 @@ Metadata:
       KeyName:
         default: Key Pair
       VaultFilesBucket:
-        default: Vault Files Bucket
+        default: S3 Bucket
       LicenseFile:
-        default: License File
+        default: Vault License File
       RecoveryPublicKey:
         default: Recovery Public Key
       VaultInstanceName:
-        default: Vault Instance Name
+        default: Primary Vault Instance Name
       VaultMasterPassword:
-        default: Vault Master Password
+        default: Primary Vault Master Password
       RetypeMasterPassword:
-        default: Retype Master Password
+        default: Retype Primary Vault Master Password
       VaultAdminPassword:
-        default: Vault Admin Password
+        default: Primary Vault Admin Password
       RetypeAdminPassword:
-        default: Retype Admin Password
+        default: Retype Primary Vault Admin Password
+      DRVaultPassword:
+        default: DR User Password
+      RetypeDRVaultPassword:
+        default: Retype the DR User Password
+      Secret:
+        default: DR User Secret
+      SecretRetype:
+        default: Retype DR User Secret
       VaultInstanceType:
-        default: Vault Instance Type
+        default: Primary Vault Instance Type
       VaultInstanceSecurityGroups:
-        default: Vault Instance Security Groups
+        default: Primary Vault Instance Security Groups
       VaultInstanceSubnetId:
-        default: Vault Instance Subnet Id
+        default: Primary Vault Instance Subnet Id
       ComponentsInstanceName:
         default: Components Instance Name
       ComponentsInstanceType:
@@ -877,56 +974,60 @@ Metadata:
         default: Components Instance Security Groups
       ComponentsInstanceSubnetId:
         default: Components Instance Subnet Id
+Conditions:
+  SecretEmpty: !Equals 
+    - ''
+    - !Ref Secret
 Mappings:
   RegionMap:
     us-east-1:
-      Vault: ami-067d67ca1445a5209
-      Components: ami-046d3f6cbf3f81203
+      Vault: ami-01d4a7bd46088f700
+      Components: ami-008819e4bd2bc224a
     us-east-2:
-      Vault: ami-0dbe87c3a37082b4d
-      Components: ami-0209dd2af358422d7
+      Vault: ami-068bc4ecc92db8199
+      Components: ami-0760243808377180b
     eu-west-2:
-      Vault: ami-078d2d55d71ec32d3
-      Components: ami-053e8181a5fb33b11
+      Vault: ami-015c5039c05236bfe
+      Components: ami-0e51fd301b0ac1f1b
     us-west-1:
-      Vault: ami-01b6d3607b9c455a5
-      Components: ami-07c0488bc1a3bf218
+      Vault: ami-0f1803a9c76472be5
+      Components: ami-0863710cb43917155
     us-west-2:
-      Vault: ami-0cd4e3ad8aad42a51
-      Components: ami-0902fd1ecd3fe3b3c
+      Vault: ami-01edee6e967c17628
+      Components: ami-018feb9b22c05d200
     ca-central-1:
-      Vault: ami-05164390c672c1172
-      Components: ami-026db006e8e61fcd2
+      Vault: ami-0582d8c1a70001244
+      Components: ami-0894c7f96641784ad
     eu-west-1:
-      Vault: ami-0cf822f2a8c89ca7d
-      Components: ami-000b0ff33ca6c12d9
+      Vault: ami-09397273b9046d5b9
+      Components: ami-0ff819a9eaff529bc
     eu-central-1:
-      Vault: ami-03a9f45466c8b1745
-      Components: ami-0b90013b8a03c5c90
+      Vault: ami-06f43402c6e002660
+      Components: ami-0cf15ea5528530c06
     ap-southeast-1:
-      Vault: ami-01a195c73e8f3da53
-      Components: ami-0c961d997319709a8
+      Vault: ami-0872cf43e69e28466
+      Components: ami-04f431192f05c65ae
     ap-southeast-2:
-      Vault: ami-07b0aa6bb69361b91
-      Components: ami-074f693172b1685e9
+      Vault: ami-0a02581b7c2a55e6f
+      Components: ami-0e9e29f304c5cda9e
     ap-northeast-2:
-      Vault: ami-04a79126206649385
-      Components: ami-006932a066875b198
+      Vault: ami-0ed3745003fa46976
+      Components: ami-0c4ce79c5a137c32c
     ap-northeast-1:
-      Vault: ami-00ba6baa337bb4579
-      Components: ami-09917cb9f169ca963
+      Vault: ami-02e14fe4621742bde
+      Components: ami-09601db9cb2a5d387
     ap-south-1:
-      Vault: ami-027b213ba79561465
-      Components: ami-0a239898d2cea14a1
+      Vault: ami-0ff8fe4a731baa07a
+      Components: ami-0f7ab50ee1a191e45
     sa-east-1:
-      Vault: ami-006243a6d82fbdc60
-      Components: ami-0c0eb23dcb99da5b5
+      Vault: ami-04b91be9198835fc8
+      Components: ami-0eee7030bbc34d5d8
     us-gov-west-1:
-      Vault: ami-680b3809
-      Components: ami-690b3808
+      Vault: ami-0e87a36f
+      Components: ami-e1220580
     us-gov-east-1:
-      Vault: ami-0c3f9622c3fe2d74a
-      Components: ami-0d3c306ce801f67d2
+      Vault: ami-00268514ee37890b9
+      Components: ami-0311b01fc5b67d05f
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
