--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -81,8 +81,7 @@ Resources:
               if 'PhysicalResourceId' in event:
                   physicalResourceId = event['PhysicalResourceId']
               if 'Password' not in event['ResourceProperties'] or not event['ResourceProperties']['Password']:
-                  print ('The property Password must not be empty')
-                  return cfnresponse.send(event, context, cfnresponse.FAILED, {}, physicalResourceId)
+                  return True
               try:
                   if event['RequestType'] == 'Delete':
                       ssmClient.delete_parameter(Name=physicalResourceId)
@@ -165,7 +164,7 @@ Resources:
     Type: AWS::CloudFormation::CustomResource
     Properties:
       ServiceToken: !GetAtt 'StorePasswordLambda.Arn'
-      Password: !Sub 'SecretEmpty'
+      Password: !Ref 'Secret'
     DependsOn:
       - LambdaDeployRole
   CleanMasterPassword:
